# robust-depth-estimator

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: metrics.py  run_benchmarks.py
engine_grounder/: __init__.py  pipeline.py
engine_grounder/geometry/: __init__.py  depth_filter.py  mesh_builder.py
engine_grounder/perception/: __init__.py  shape_descriptor.py  shape_encoder.py  vlm_agent.py
engine_grounder/spatial/: __init__.py  projector.py  visualizer.py
engine_grounder/streams/: __init__.py  mock_stream.py  quest_stream.py  sensor_stream.py
engine_grounder/utils/: __init__.py  synthetic_data.py
examples/: main.py  prepare_bunny.py  prepare_data.py  render_split_viz.py
tests/: test_depth_filter.py  test_edge_cases.py  test_mesh_builder.py  test_mock_stream.py  test_pipeline_metrics.py  test_projector.py  test_shape_descriptor.py  test_shape_encoder.py  test_synthetic_data.py
tools/: generate_poster_qr.py
