[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engine-grounder"
version = "0.1.0"
description = "Vision-Language grounded 3-D spatial reasoning pipeline with adaptive depth filtering"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "David Vegas", email = "dvegas03@example.com" }]
requires-python = ">=3.9"
keywords = ["depth-estimation", "point-cloud", "3d-reconstruction", "computer-vision", "spatial-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]

# Core runtime dependencies — kept minimal so the geometry pipeline
# can run without optional visualization or VLM packages.
dependencies = [
    "torch>=2.0",
    "open3d>=0.17",
    "numpy>=1.24",
    "opencv-python>=4.7",
    "scipy>=1.10",
]

[project.optional-dependencies]
# Visualization (Plotly + scikit-learn for PCA colour mapping)
viz = [
    "plotly>=5.14",
    "scikit-learn>=1.3",
]

# VLM inference — heavy; only needed when plugging in Qwen-VL
vlm = [
    "transformers>=4.36",
    "Pillow>=9.5",
]

# Poster / QR-code generation tool
tools = [
    "qrcode[pil]>=7.4",
    "Pillow>=9.5",
]

# Development + testing
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

# Install everything for CI
all = [
    "engine-grounder[viz,vlm,tools,dev]",
]

[project.urls]
Homepage = "https://github.com/dvegas03/robust-depth-estimator"
Repository = "https://github.com/dvegas03/robust-depth-estimator"
Issues = "https://github.com/dvegas03/robust-depth-estimator/issues"

# ── Hatch build config ────────────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["engine_grounder"]

# ── Ruff linter / formatter ───────────────────────────────────────────────────
[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in default arguments
    "SIM108", # use ternary instead of if-else (readability preference)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]   # allow assert in tests
"examples/*" = ["T201"] # allow print() in example scripts
"benchmarks/*" = ["T201"]
"tools/*" = ["T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy type checking ────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true  # Open3D stubs not always available

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
